# coreset

./: .gitignore  Untitled.ipynb  pyproject.toml  run_pipe.sh
27_nov/: Untitled.ipynb  reuniao_23_out.ipynb
27_nov/results/: __Untitled.ipynb
coreset/: __init__.py  dataset.py  environ.py  evaluator.py  experiments.py  kmeans.py  lazzy_greed.py  metrics.py  model.py  opt_freddy.py  train.py  utils.py
coreset/dataset/: dataset.py  numpy_utils.py  transform.py
coreset/model/: basics.py  neuralnet.py  nlp.py
coreset/samplling/: sampler.py
coreset/utils/: dataset.py  lazzy_greed.py  metrics.py
experiment/adult/: config.ini
experiment/nursery/: __main__.py
experiments/: Untitled.ipynb  adult.py
experiments/adult/: __main__.py  adult.py
experiments/alpha/adult/: __main__.py
experiments/alpha/bike_share/: __main__.py
experiments/alpha/covtype/: __main__.py
experiments/alpha/drugs_review/: __main__.py  config.ini  make_dataset.py
experiments/alpha/nursery/: __main__.py
experiments/alpha/sgemm_performance/: __main__.py  config.ini
experiments/b_sise/adult/: __main__.py
experiments/b_sise/bike_share/: __main__.py
experiments/b_sise/covtype/: __main__.py  config.ini
experiments/b_sise/drugs_review/: __main__.py  config.ini
experiments/b_sise/nursery/: __main__.py
experiments/b_sise/sgemm_performance/: __main__.py  config.ini
experiments/beta/bike_share/: config.ini
experiments/beta/drugs_review/: __main__.py  config.ini
experiments/beta/nursery/: config.ini
experiments/beta/sgemm_performance/: __main__.py  config.ini
experiments/data_scheduler/drugs_review/: __main__.py  config.ini
experiments/learn_curve/adult/: __main__.py  config.ini
experiments/learn_curve/bike_share/: __main__.py  config.ini
experiments/learn_curve/drugs_review/: __main__.py  config.ini
experiments/mnist/: __main__.py  config.ini  test.py
experiments/nursery/: __main__.py  nursery.py
experiments/spotify/: __main__.py  config.ini
freddy/: __init__.py  environ.py  evaluator.py  metrics.py  tasks.py  train.py
freddy/dataset/: dataset.py  load_data.py  transform.py  utils.py
freddy/model/: basics.py  nlp.py
freddy/sampling/: kmeans.py
results/: Untitled.ipynb  __Untitled.ipynb  reuniao_23_out.ipynb
results/results/: Untitled.ipynb
tests/dataset/: test_dataset.py
tests/utils/: test_metrics.py
torch_utils/: data.py  metrics.py  tasks.py  train.py
(+15 files in other folders)
