[tool.poetry]
name = "coreset"
version = "0.1.0"
description = ""
authors = ["victor-ribeiro <ribeiro.victor.dornellas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1.post1"
xgboost = "^2.1.1"
python-dotenv = "^1.0.1"
poetry-dotenv-plugin = "^0.2.0"
pyarrow = "^17.0.0"
seaborn = "^0.13.2"

[tool.poetry.scripts]
adult='experiments.adult:main'

[tool.poetry.plugins.dotenv]
# ignore = "true"
location = ".env"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
