[tool.poetry]
name = "coreset"
version = "0.1.0"
description = ""
authors = ["victor-ribeiro <ribeiro.victor.dornellas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1.post1"
xgboost = "^2.1.1"
python-dotenv = "^1.0.1"
poetry-dotenv-plugin = "^0.2.0"
pyarrow = "^17.0.0"
seaborn = "^0.13.2"
numba = "^0.60.0"
configparser = "^7.1.0"
unidecode = "^1.3.8"
nltk = "^3.9.1"
torch = "2.3.0"
torchtext = "0.18"
spacy = "^3.8.2"
imbalanced-learn = "^0.12.4"
tensorflow = "^2.18.0"
jax = "^0.4.35"
cudf-cu11 = { version="^23.02", source="rapids" }
dask-cudf-cu11 = { version="^23.02", source="rapids" }
cuml-cu11 = { version="^23.02", source="rapids" }



[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[[tool.poetry.source]]
name="rapids"
url="https://pypi.nvidia.com"
priority = "primary"

[tool.poetry.plugins.dotenv]
# ignore = "true"
location = ".env"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
